# roadrunner-cli

./: .context_snapshot.json  .gitignore  .reset_ROAD-001  .reset_ROAD-002  .reset_ROAD-003  .reset_ROAD-004  .reset_ROAD-005  .reset_ROAD-006  .reset_ROAD-007  .reset_ROAD-008  .reset_ROAD-009  .reset_TASK-001  .reset_TASK-002  .reset_TASK-003  .reset_TASK-004  .reset_TASK-005  .reset_TASK-006  .roadmap_state.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt  roadmap_loop.py  roadrunner.py  rr_session.py  rr_state.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  weekly-smoke.yml
docs/: WORKFLOW.md  architecture-review-2026-04-15.md  architecture.md  code-review-audit.md  configuration.md  hotfix-log.md  release.md  roadrunner-comparison-analysis-2026-05-01.md
docs/adr/: 001-line-anchored-completion-signal.md  002-check-stop-in-progress-awareness.md  003-retry-storm-prevention.md  004-atomic-writes-and-data-integrity.md  005-absolute-hook-paths.md  006-structured-trace-logging.md  007-dead-hook-cleanup.md  008-validation-timeout-and-task-id-sanitization.md  010-hook-python-entrypoint-unification.md  (+2 more)
hooks/: README.md  _session_start.py  post_write_hook.sh  postcompact_hook.sh  precompact_hook.sh  session_start_hook.sh  stop_hook.sh  task_completed_hook.sh
logs/: CHANGELOG.md  ROAD-001.md  ROAD-002.md  ROAD-003.md  ROAD-004.md  ROAD-005.md  ROAD-006.md  ROAD-007.md  ROAD-008.md  ROAD-009.md  ROAD-010.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md
tasks/: tasks.yaml
tests/: conftest.py  test_hooks.py  test_roadrunner.py  test_rr_session.py
(+12 files in other folders)
