[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadrunner-cli"
version = "0.1.0"
description = "Deterministic agentic loop controller for Claude Code — Python owns the roadmap, Claude owns the implementation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Fox", email = "afoxnyc@icloud.com" }]
keywords = ["claude-code", "agentic", "roadmap", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "build>=1.0",
]

[project.scripts]
roadrunner = "roadrunner:main"

[project.urls]
Homepage = "https://github.com/afoxnyc3/roadrunner-cli"
Repository = "https://github.com/afoxnyc3/roadrunner-cli"
Issues = "https://github.com/afoxnyc3/roadrunner-cli/issues"

[tool.setuptools]
py-modules = ["roadrunner", "rr_state", "rr_session"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
